--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "express": "^4.17.1",
     "express-session": "^1.17.2",
     "googleapis": "^84.0.0",
+    "mongodb": "^4.1.1",
+    "mongoose": "^6.0.2",
     "passport": "^0.4.1",
     "passport-google-oauth2": "^0.2.0"
   },
